// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call expressions accepts arguments 1`] = `
Array [
  Expression {
    "expression": Call {
      "args": Array [
        Literal {
          "_location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "kind": 3,
            "value": 1,
          },
        },
        Literal {
          "_location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "kind": 3,
            "value": 2,
          },
        },
      ],
      "callee": Variable {
        "name": Object {
          "isReserved": false,
          "kind": 29,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "add",
        },
      },
      "closingParen": Object {
        "isReserved": false,
        "kind": 1,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
    },
  },
]
`;

exports[`parser call expressions allows closing parentheses on separate line 1`] = `
Array [
  Expression {
    "expression": Call {
      "args": Array [],
      "callee": Variable {
        "name": Object {
          "isReserved": false,
          "kind": 29,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "RebootSystem",
        },
      },
      "closingParen": Object {
        "isReserved": false,
        "kind": 1,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
    },
  },
]
`;

exports[`parser call expressions parses named function calls 1`] = `
Array [
  Expression {
    "expression": Call {
      "args": Array [],
      "callee": Variable {
        "name": Object {
          "isReserved": false,
          "kind": 29,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "RebootSystem",
        },
      },
      "closingParen": Object {
        "isReserved": false,
        "kind": 1,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
    },
  },
]
`;
